javax->jakarta
Reading working completely.
Most of writing is working.